--- a/target-eclipse/classes/.gitignore
+++ b/target-eclipse/classes/.gitignore
@@ -72,3 +72,9 @@
 /UrlMappings$__clinit__closure1_closure2.class
 /UrlMappings$__clinit__closure1_closure2_closure3.class
 /UrlMappings.class
+/Config$_run_closure1_closure5.class
+/Config$_run_closure3.class
+/Config$_run_closure3_closure6.class
+/Config$_run_closure3_closure7.class
+/Config$_run_closure3_closure8.class
+/Config$_run_closure3_closure9.class
