--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
 #Grails Metadata file
-#Fri Mar 22 10:16:34 CST 2013
+#Fri Apr 19 10:45:03 CDT 2013
 app.grails.version=2.2.1
 app.name=inventarios3
 app.version=0.1
+plugins.burning-image=0.5.1
