Reportes de empleados agregados

--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,7 @@
 #Grails Metadata file
-#Fri Apr 19 10:45:03 CDT 2013
+#Wed Jul 24 14:17:37 CDT 2013
 app.grails.version=2.2.1
 app.name=inventarios3
 app.version=0.1
 plugins.burning-image=0.5.1
+plugins.jasper=1.6.1
