--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,8 @@
 #Grails Metadata file
-#Wed Jul 24 14:17:37 CDT 2013
+#Tue Oct 01 09:58:06 CDT 2013
 app.grails.version=2.2.1
 app.name=inventarios3
 app.version=0.1
 plugins.burning-image=0.5.1
 plugins.jasper=1.6.1
+plugins.mail=1.0.1
